Graphic design tweaks; prepare for user app packaging

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,23 @@
-#object files
+# object files
 *.o
-#Qt's moc files
+# Qt's Meta-Object Compiler (moc) files
 moc_*
 cacamap
 output
-#vim
-#tempfiles
+# vim
+# tempfiles
 *.swp
 *.swo
 *.sw*
-#my session file
+# my session file
 session.vim
-#Doxygen stuff
+# Doxygen stuff
 cache
 html
 latex
-#Makefiles should be regenerated everytime someone clones the repo cause the paths in there wont be valid to others
+# Makefiles should be regenerated everytime someone clones the repo cause the paths in there wont be valid to others
 Makefile
-#experimental tile server file
+# Experimental tile server file
 tileservers2.xml
+# QtCreator project file
+*.pro.user
